Atualizando o index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Serasa</title>
+        <title>God of War: Ragnarok</title>
     </head>
     <body>
-        <h1> Com dividas: Fernanda Matana Bianchi </h1>
+        <h1>Melhor jogo de PS4 que existe.(até então)</h1>
+        <img src="Imagens/Gow Rag.png"height="350"width="500">
+        <a href="https://www.google.com.br">Clique aqui para abrir o google</a>      
+        <ol>
+            <li>GOW Ragnarok é a sequência do popular videogame God of War, que foi lançado em 2018 e ganhou inúmeros prêmios por sua história, jogabilidade e inovação técnica. </li>
+            <li> O jogo foca na mitologia nórdica e apresenta Kratos, o protagonista da série, como um deus mais velho e sábio que luta contra os deuses de Ragnarok, o fim do mundo segundo a mitologia nórdica. </li>
+            <li>GOW Ragnarok será exclusivo do console PlayStation 5, o que significa que estará disponível apenas para quem possui o console de última geração da Sony. Além disso, espera-se que o jogo aproveite ao máximo os recursos técnicos do PS5, como aceleração de rastreamento de raios e áudio 3D imersivo. </li>
+        </ol>
+        <ul>
+            <li>GOW Ragnarok é a sequência do popular videogame God of War, que foi lançado em 2018 e ganhou inúmeros prêmios por sua história, jogabilidade e inovação técnica. </li>
+            <li> O jogo foca na mitologia nórdica e apresenta Kratos, o protagonista da série, como um deus mais velho e sábio que luta contra os deuses de Ragnarok, o fim do mundo segundo a mitologia nórdica. </li>
+            <li>GOW Ragnarok será exclusivo do console PlayStation 5, o que significa que estará disponível apenas para quem possui o console de última geração da Sony. Além disso, espera-se que o jogo aproveite ao máximo os recursos técnicos do PS5, como aceleração de rastreamento de raios e áudio 3D imersivo. </li>
+        </ul>
     </body>
 </html>
