atualizando index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
     <head>
         <title>God of War: Ragnarok</title>
+        <style>
+            h1{
+                color:#358faa;
+                font-size:40px;
+                text-align: center;
+
+            }
+        </style>
     </head>
     <body>
         <h1>Melhor jogo de PS4 que existe.(até então)</h1>
         <img src="Imagens/Gow Rag.png"height="350"width="500">
-        <a href="https://www.google.com.br">Clique aqui para abrir o google</a>      
+        <br>
+        <a href="https://www.youtube.com/watch?v=x6oF3Jxu7X0">Clique aqui para abrir um video da hora!!!</a>      
         <ol>
             <li>GOW Ragnarok é a sequência do popular videogame God of War, que foi lançado em 2018 e ganhou inúmeros prêmios por sua história, jogabilidade e inovação técnica. </li>
             <li> O jogo foca na mitologia nórdica e apresenta Kratos, o protagonista da série, como um deus mais velho e sábio que luta contra os deuses de Ragnarok, o fim do mundo segundo a mitologia nórdica. </li>
@@ -17,5 +26,26 @@
             <li> O jogo foca na mitologia nórdica e apresenta Kratos, o protagonista da série, como um deus mais velho e sábio que luta contra os deuses de Ragnarok, o fim do mundo segundo a mitologia nórdica. </li>
             <li>GOW Ragnarok será exclusivo do console PlayStation 5, o que significa que estará disponível apenas para quem possui o console de última geração da Sony. Além disso, espera-se que o jogo aproveite ao máximo os recursos técnicos do PS5, como aceleração de rastreamento de raios e áudio 3D imersivo. </li>
         </ul>
+        <table border="1" cellspacing="2" cellpadding="5">
+            <tr>
+                <td> Nome </td>
+                <br>
+                <td> Idade </td>
+                <br>
+                <td> Estado civil </td>
+                <br>
+            </tr>
+            <td> Kratos </td>
+            <br>
+            <td> 1000+ </td>
+            <br>
+            <td> Viuvo </td>
+            <br>
+            <tr>
+                <td> Atreus </td>
+                <td> 14 </td>
+                <td> Solteiro </td>
+            </tr>
+        </table>
     </body>
 </html>
