Atualização index.html

--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
                 color:#358faa;
                 font-size:40px;
                 text-align: center;
-
             }
         </style>
     </head>
     <body>
-        <h1>Melhor jogo de PS4 que existe.(até então)</h1>
+        <style>
+            body{
+                background-color: aquamarine;
+                border-bottom:thistle;
+            }
+        </style>
+        <h1><big><b>Melhor jogo de PS4 que existe</b></big>.(até então)</h1>
         <img src="Imagens/Gow Rag.png"height="350"width="500">
         <br>
-        <a href="https://www.youtube.com/watch?v=x6oF3Jxu7X0">Clique aqui para abrir um video da hora!!!</a>      
+        <a href="https://www.youtube.com/watch?v=x6oF3Jxu7X0"><i>Clique aqui para abrir um video da hora!!!</i></a>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/CV0AhXAW_zk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <ol>
-            <li>GOW Ragnarok é a sequência do popular videogame God of War, que foi lançado em 2018 e ganhou inúmeros prêmios por sua história, jogabilidade e inovação técnica. </li>
+            <li>GOW Ragnarok é a sequência do popular videogame God of War, que foi <u>lançado em 2018</u> e ganhou inúmeros prêmios por sua história, jogabilidade e inovação técnica. </li>
             <li> O jogo foca na mitologia nórdica e apresenta Kratos, o protagonista da série, como um deus mais velho e sábio que luta contra os deuses de Ragnarok, o fim do mundo segundo a mitologia nórdica. </li>
             <li>GOW Ragnarok será exclusivo do console PlayStation 5, o que significa que estará disponível apenas para quem possui o console de última geração da Sony. Além disso, espera-se que o jogo aproveite ao máximo os recursos técnicos do PS5, como aceleração de rastreamento de raios e áudio 3D imersivo. </li>
         </ol>
