atualização index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
                 color:#358faa;
                 font-size:40px;
                 text-align: center;
+                text-decoration: cadetblue underline 4px;
             }
         </style>
     </head>
